<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_300"
    android:layout_height="@dimen/dp_200"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/versionUpdateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/primary_text_light"
        android:textSize="@dimen/sp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/dialog_version_update"
        android:scrollbars="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/divider_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@color/diver"
        android:layout_marginTop="@dimen/dp_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/versionUpdateTv"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/versionContentTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_18"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_5"
        android:layout_marginStart="@dimen/dp_10"
        tools:text="1、WanAndroid第一版发布！1、WanAndroid第一版发布！ 1、WanAndroid第一版发布！  "
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_1"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/divider_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@color/diver"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/versionContentTv"
        app:layout_constraintRight_toRightOf="parent"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/updateLaterTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_version_later"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/divider_3"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <View
            android:id="@+id/divider_3"
            android:layout_width="@dimen/dp_2"
            android:layout_height="0dp"
            android:background="@color/diver"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/updateNowTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_version_now"
            android:textColor="@color/colorWanStyle"
            android:textStyle="bold"
            android:textSize="@dimen/sp_16"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/divider_3"
             />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>